--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,1 +1,3 @@
-<p>header works!</p>
+<header class="wrapper row full-center">
+    <img src="../../assets/images/logo.svg" alt="logo image" class="logo">
+</header>
