product are visible on body

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,7 +19,7 @@ app-root{
 
 .row{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 }
 
 .column{
@@ -61,4 +61,17 @@ app-root{
 
 .align-center{
     align-items: center;
+}
+
+.justify-center{
+    justify-content: center;
+}
+
+.full-center{
+    align-items: center;
+    justify-content: center;
+}
+
+.hidden{
+    display: none;
 }
