--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,9 @@
 <div class="column">
     <div class="row wrap gap-1 space-between">
-        <app-product *ngFor="let product of products" [product]="product"></app-product>
+        <app-product 
+        *ngFor="let product of products" 
+        [product]="product"
+        (productOutput)="onProductOutput($event)"
+        ></app-product>
     </div>
 </div>
