--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,8 +1,8 @@
 <div class="column gap-1 wrapper">
     <img [src]="product.image" alt="Product Thumbnail">
     <h2 class="title">{{product.name}}</h2>
-    <div class="row">
-        <span class="price-label">Price</span>
+    <div class="row gap-05">
+        <span class="price-label ">Price:</span>
         <span class="price">{{product.price}}</span>
     </div>
     <p-rating [(ngModel)]="product.rating" 
