--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 @import "./styles/variables.scss";
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
+@import "./styles/theme-overrides.scss";
 
 html, body, p, h1, h2, h3, h4{
     margin: 0;
@@ -45,6 +46,10 @@ app-root{
 
 .wrap{
     flex-wrap: wrap;
+}
+
+.gap-05{
+    gap: 0.5rem;
 }
 
 .gap-1{
