--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,6 @@
-<div class="column">
+<div class="column gap-1">
+    <!--Products section-->
+
     <div class="row wrap gap-1 space-between">
         <app-product 
         *ngFor="let product of products" 
@@ -6,4 +8,12 @@
         (productOutput)="onProductOutput($event)"
         ></app-product>
     </div>
+
+    <!--Paginator-->
+    <p-paginator
+        [rows]="rows"
+        [totalRecords]="totalRecords"
+        [rowsPerPageOptions]="[5, 10, 20]"
+        (onPageChange)="onPageChange($event)"
+    ></p-paginator>
 </div>
